<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">VirtualRadio by NINJ. Parsing channels, please wait..! Visit vradio.org for infos..</string>
    <string name="app_name">VirtualRadio</string>
    <string name="listi_name">Category</string>
    <string name="stations">Radio Stations</string>
    <string name="menu_play">Playing </string>
    <string name="menu_stop">Stop</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="play">Play </string>
    <string name="favorites">Favorites</string>
    <string name="addfavorites">Added Favorite </string>
    <string name="remfavorites">Removed Favorite </string>
    <string name="searchtext">Enter something to start search</string>
    <string name="control">Control</string>
    <string name="helptext">To start playback, long touch the station name. Touch star to add station to favorites.\nAdd new station at vradio.org/preadd.php.\nBe careful, playing radio in mobile networks with high bitrates (>32kb) can be expensive if you don\'t have a flat rate.\n\nContains LGPL software Cling 1.0.5 http://4thline.org/projects/cling \n\nSpecial thanks to Robbie Müller, Peter Haight, Chris Pfranger, Markus Boeniger, Felix Schaad and Oli Wehrli</string>
	<string name="menu_help">Help</string>
	<string name="helptext2">VirtualRadio 2.51 from NINJ GmbH Zurich\nVisit www.vradio.org</string>
	<string name="helptext3">If you like VirtualRadio please support us to make it even better: Vote 5 Stars at the Play store or make a 1$/€ donation.</string>
	<string name="helptext4">Give Stars at Store</string>
	<string name="helptext5">Donation</string>
	<string name="save">Record</string>
	<string name="save_cb">Auto rec on</string>
	<string name="save_tx">Record all radio sessions to SD card.</string>
	<string name="save_tx2">If the checkbox above is checked, the complete radio session is recorded to your SD card. Everything or nothing will be stored at the end of streaming if record is active or not.</string>
	<string name="save_tx3">Recorded MP3</string>
	<string name="save_tx4">Recorded radio-sessions show up here</string>
	<string name="save_cache">Reload description file on startup or when this checkbox is changed to checked</string>
	<string name="save_del">Do you really want to delete this file:</string>
	<string name="savedia1">Play with external player</string>
    <string name="savedia2">Play with VirtualRadio</string>
    <string name="savedia4">Play on WLAN/UPnP Speaker/TV</string>
    <string name="savedia3">Cut</string>
	<string name="favotx">Select the star of a station and it will show up as a favorite in this list\nClick this text to add a custom stream URL.</string>
	<string name="custurltx1">Enter deep linking URL of stream"</string>
	<string name="custurltx2">Name</string>
	<string name="custurltxt">Custom URL</string>
	<string name="custurlcom2">Edit</string>
	<string name="custurlcom3">Delete</string>
	<string name="custurlcom1">Play</string>
    <string name="custurlcom4">Click here to enter URL</string>
    <string name="custurlcom5">I Like (Contacting server to update database)</string>
    <string name="custurlcom6">Contacting server to update database via http</string>
    <string name="custurlcom7">Most Liked (Remote database via http)</string>
    <string name="custurlcom8">Submit to vradio.org</string>
	<string name="custurlcom">Please select</string>	
	<string name="buffering">Buffering..</string>
	<string name="memlo1">Sorry, memory low, please free some space on your SD Card!</string>
	<string name="memlo2">Your SD Card is low on memory or not mounted, please remove USB cable if present. VirtualRadio needs memory to cache data. You will need about 30 Megabytes for listening to 1 hour of a 64kb stream..</string>
	<string name="nocon">No connection to radio server, please try again later or check settings..</string>
	<string name="nocon2">Settings</string>
	<string name="nocon3">Stream ended!</string>
	<string name="http_tx">Start File Server to access the content of your SD card from a remote browser via WLAN. Be aware that everybody in the local network can access your content</string>
	<string name="http_inf">Direct your browser to\nhttp://</string>
	<string name="http_infb">WLAN not available</string>
	<string name="parsedat">Please wait, loading remote data...</string>
	<string name="spause">Pause playback</string>
	<string name="sresume">Resume playback</string>
	<string name="recmp3">Recording - - - Duration:</string>
	<string name="cate">Category:</string> 
	<string name="bitrate">Bitrate:</string> 
	<string name="parsedat2">Welcome to VirtualRadio.\n\nUse long click to select.</string>
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="buytx1">Buy\n</string>
	<string name="buytx2">\n on Amazon.com</string>
	<string name="quit1">Quit and resume playback next restart</string>
	<string name="quit2">Yes</string>
	<string name="quit3">No just stop</string>	
	<string name="selbackg">Select background</string>
	<string name="cachetx1">Welcome to VirtualRadio.\n\nUse long click to select or play in this app!\n\nPlease select when to reload the description file(80kb)</string>
	<string name="cachetx2">Each startup</string>
	<string name="cachetx3">Once</string>
	<string name="cachetx4">Never</string>
	<string name="cachetx5">Show this again</string>	
	<string name="upnp1">Play on WLAN/UPNP Speaker!</string>
	<string name="upnp2">Visible Speakers in WLAN (click to activate):</string>	
	<string name="upnp3">No UPNP Speaker found</string>
	<string name="upnp4">UPNP Volume</string>	
	<string name="clock1">Radio Clock</string>
	<string name="clock2">VirtualRadio will start at selected time and date with radio last played</string>
	<string name="clock3">External volume</string>
	<string name="add1">Support VirtualRadio, accept few ads!</string>
	<string name="mocon1">Use mobile network?</string>	
	<string name="mocon2">Warn if using mobile network!</string>
	<string name="mocon3">WLAN must be enabled even if mobile data connection is used!</string>
</resources>