<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"  
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"  
  android:background="@android:color/transparent"
  android:orientation="vertical"

  android:layout_gravity="center_vertical|center_horizontal">
<Button
	android:id="@+id/b1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/translucent_dark"
	android:text="@string/custurlcom1" 
	android:textColorHighlight="@color/rgray1"
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10sp"
	android:layout_gravity="center_horizontal|center_vertical"
	/> 
	<Button
	android:id="@+id/b2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"	
	android:text="@string/custurlcom2" 
	android:background="@color/translucent_dark"
	android:textColorHighlight="@color/rgray1"
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10sp"
	android:layout_gravity="center_horizontal|center_vertical"
	/>
	<Button
	android:id="@+id/b3"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"	
	android:text="@string/custurlcom3" 
	android:background="@color/translucent_dark"
	android:textColorHighlight="@color/rgray1"
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10sp"
	android:layout_gravity="center_horizontal|center_vertical"
	/>
	<Button
	android:id="@+id/b4"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"	
	android:text="@string/custurlcom5" 
	android:background="@color/translucent_dark"
	android:textColorHighlight="@color/rgray1"
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10sp"
	android:layout_gravity="center_horizontal|center_vertical"
	/>

</LinearLayout>
