<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"  
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"  
  android:background="@android:color/transparent"
  android:orientation="vertical"
  android:paddingLeft="60dp"
  android:paddingRight="60dp"
  android:paddingTop="120dp"
  android:layout_gravity="center_vertical|center_horizontal">
<TextView
	android:id="@+id/statx"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/translucent_dark3"
	android:text="@string/nocon" 
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10dp"
	android:layout_gravity="center_horizontal|center_vertical"
	/> 
<TextView
	android:id="@+id/statx2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/translucent_dark3"
	android:text="" 
	android:textColor="@color/white"
	android:textSize="12sp"
	android:padding="10dp"
	android:layout_gravity="center_horizontal|center_vertical"
	/> 
	<Button
	android:id="@+id/netbu"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/translucent_dark2"
	android:text="@string/nocon2" 
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10dp"
	android:layout_gravity="center_horizontal|center_vertical"
	/>
	<Button
	android:id="@+id/stabu"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/translucent_dark2"
	android:text="@string/ok" 
	android:textColor="@color/white"
	android:textSize="20sp"
	android:padding="10dp"
	android:layout_gravity="center_horizontal|center_vertical"
	/>
</LinearLayout>